# robotiq_mm_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: GripperCommand.action
docker/: Dockerfile  README.md  build_docker.sh  docker-compose.robotiq_mm_ros_noetic.yml  docker-compose.yml  new_terminal.sh
launch/: robotiq_server.launch
scripts/: close_gripper.py  open_gripper.py  robotiq_client.py  robotiq_server.py
src/robotiq_mm/: robotiq_gripper.py
srv/: GetGripperPos.srv
